data/derived/comb/progs/unify/prog5436.ml.out
Characters 155-160:
  	  helper (seen',rest')   
             ^^^^^
Error: This expression has type bool but an expression was expected of type
         'a list
